# bootstrap

./: .gitignore  pyproject.toml  qasnippet.ipynb
bootstrap/: 20230317.ipynb  20230317_session1.ipynb  __init__.py  auth.py  base_prompts.py  code_editing.py  codebase_index.py  dummy_module.py  github_indices.py  interface_setup.py  introspection.py  repo2docstore.py  toolchain.py
notebooks/: 20230320_session2.ipynb  20230321_session3.ipynb  20230321_session4.ipynb  20230321_session5.ipynb  20230325_testing_external_indices.ipynb  20230325_testing_toolkit.ipynb  template.ipynb
tests/: test_interface_setup.py  test_introspection.py
