[tool.poetry]
name = "bootstrap"
version = "0.1.0"
description = ""
authors = ["Naka <alex.naka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.115"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
pydantic = "^1.10.6"
openai = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
