[tool.poetry]
name = "bootstrap"
version = "0.1.0"
description = ""
authors = ["Naka <alex.naka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
debugpy = "1.6.2"
openai = "^0.27.2"
langchain = "^0.0.125"
pydantic = "^1.10.6"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
faiss-cpu = "^1.7.3"
click = "^8.1.3"
llama-index = "^0.4.34"
setuptools = "^67.6.0"
nest-asyncio = "^1.5.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20"
pytest = "^7.2.2"
jupyter = "^1.0.0"
notebook = "^6.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200 # let black handle it